--- a/archives/toutiao-search/2024-02-23.md
+++ b/archives/toutiao-search/2024-02-23.md
@@ -1,50 +1,75 @@
 # 2024-02-23
 
-共 290 条
+共 304 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 23 2024 20:00:47 GMT+0800 (China Standard Time) -->
-1. [东莞3人返工时患经济舱综合征身亡](https://so.toutiao.com/search?keyword=东莞3人返工时患经济舱综合征身亡)
+<!-- 最后更新时间 Fri Feb 23 2024 21:01:08 GMT+0800 (China Standard Time) -->
+1. [大桥事故幸存者：掉在车上有缓冲](https://so.toutiao.com/search?keyword=大桥事故幸存者：掉在车上有缓冲)
 1. [社区自制除雪“神器”简单粗暴有效](https://so.toutiao.com/search?keyword=社区自制除雪“神器”简单粗暴有效)
-1. [热热闹闹迎元宵节](https://so.toutiao.com/search?keyword=热热闹闹迎元宵节)
+1. [各地这些特色花灯别错过](https://so.toutiao.com/search?keyword=各地这些特色花灯别错过)
 1. [被拜登脏话辱骂 普京回应嘲讽拉满](https://so.toutiao.com/search?keyword=被拜登脏话辱骂+普京回应嘲讽拉满)
 1. [“元宵要躲藏不能床上躺”是什么梗](https://so.toutiao.com/search?keyword=“元宵要躲藏不能床上躺”是什么梗)
 1. [苏州高架多车追尾 目击者发声](https://so.toutiao.com/search?keyword=苏州高架多车追尾+目击者发声)
 1. [小米手机连续14季度稳居全球前三](https://so.toutiao.com/search?keyword=小米手机连续14季度稳居全球前三)
-1. [央媒评乘务员餐车吃饭被怒怼](https://so.toutiao.com/search?keyword=央媒评乘务员餐车吃饭被怒怼)
+1. [东莞3人返工时患经济舱综合征身亡](https://so.toutiao.com/search?keyword=东莞3人返工时患经济舱综合征身亡)
 1. [雪夜天女镇长给高速滞留司机送食物](https://so.toutiao.com/search?keyword=雪夜天女镇长给高速滞留司机送食物)
 1. [苏州高架百车追尾致9伤](https://so.toutiao.com/search?keyword=苏州高架百车追尾致9伤)
 1. [遇难公交司机凌晨4点工作到晚7点](https://so.toutiao.com/search?keyword=遇难公交司机凌晨4点工作到晚7点)
 1. [警方辟谣四川打群架死20人](https://so.toutiao.com/search?keyword=警方辟谣四川打群架死20人)
 1. [道路结冰行驶注意事项](https://so.toutiao.com/search?keyword=道路结冰行驶注意事项)
+1. [出嫁女儿一句话让全场爆笑](https://so.toutiao.com/search?keyword=出嫁女儿一句话让全场爆笑)
+1. [高合汽车回应拖欠工资：破产也会给](https://so.toutiao.com/search?keyword=高合汽车回应拖欠工资：破产也会给)
+1. [苏州高架一名交警指挥交通被撞](https://so.toutiao.com/search?keyword=苏州高架一名交警指挥交通被撞)
+1. [韩医生试图向尹锡悦提建议遭拖走](https://so.toutiao.com/search?keyword=韩医生试图向尹锡悦提建议遭拖走)
+1. [南京一高层小区起火致4死](https://so.toutiao.com/search?keyword=南京一高层小区起火致4死)
+1. [专家：一二线城市房价大概率要涨](https://so.toutiao.com/search?keyword=专家：一二线城市房价大概率要涨)
+1. [撒贝宁告诫新生要对自己人生负责](https://so.toutiao.com/search?keyword=撒贝宁告诫新生要对自己人生负责)
+1. [男子赶海拖海肠体力不支溺水](https://so.toutiao.com/search?keyword=男子赶海拖海肠体力不支溺水)
+1. [《南来北往》亲情爱情双重虐心](https://so.toutiao.com/search?keyword=《南来北往》亲情爱情双重虐心)
+1. [大V谈阿根廷财政盈余的代价](https://so.toutiao.com/search?keyword=大V谈阿根廷财政盈余的代价)
+1. [烟台多人捡海肠被海浪击倒溺水](https://so.toutiao.com/search?keyword=烟台多人捡海肠被海浪击倒溺水)
+1. [男子扫雪发现冰下不明物体游动](https://so.toutiao.com/search?keyword=男子扫雪发现冰下不明物体游动)
+1. [高合创始人丁磊现身上海总部](https://so.toutiao.com/search?keyword=高合创始人丁磊现身上海总部)
+1. [《热辣滚烫》票房破31亿](https://so.toutiao.com/search?keyword=《热辣滚烫》票房破31亿)
+1. [南京家长吐槽中小学调休](https://so.toutiao.com/search?keyword=南京家长吐槽中小学调休)
+1. [专家解读普京回应拜登辱骂](https://so.toutiao.com/search?keyword=专家解读普京回应拜登辱骂)
+1. [孕妇要注意哪些方面](https://so.toutiao.com/search?keyword=孕妇要注意哪些方面)
+1. [中方再次呼吁加沙地带立即停火](https://so.toutiao.com/search?keyword=中方再次呼吁加沙地带立即停火)
+1. [高合汽车：正全力采取各种纾困举措](https://so.toutiao.com/search?keyword=高合汽车：正全力采取各种纾困举措)
+1. [王小利回应被断绝父子关系](https://so.toutiao.com/search?keyword=王小利回应被断绝父子关系)
+1. [新冠或是首个X疾病](https://so.toutiao.com/search?keyword=新冠或是首个X疾病)
+1. [大桥被撞涉事船舶累计保额1000万元](https://so.toutiao.com/search?keyword=大桥被撞涉事船舶累计保额1000万元)
+1. [脑梗发病的前兆是什么](https://so.toutiao.com/search?keyword=脑梗发病的前兆是什么)
+1. [地铁口摩的哥为抢客持刀互殴](https://so.toutiao.com/search?keyword=地铁口摩的哥为抢客持刀互殴)
+1. [金晨新加坡环球游玩被偶遇](https://so.toutiao.com/search?keyword=金晨新加坡环球游玩被偶遇)
+1. [中风以后会影响寿命吗](https://so.toutiao.com/search?keyword=中风以后会影响寿命吗)
+1. [导致杨老二死亡的吸入性窒息是啥](https://so.toutiao.com/search?keyword=导致杨老二死亡的吸入性窒息是啥)
+1. [专家解读东部战区海报出现海警元素](https://so.toutiao.com/search?keyword=专家解读东部战区海报出现海警元素)
+1. [俄乌战事两周年 乌克兰经历了什么](https://so.toutiao.com/search?keyword=俄乌战事两周年+乌克兰经历了什么)
+1. [下冻雨家门口坡上结冰母子俩回不去](https://so.toutiao.com/search?keyword=下冻雨家门口坡上结冰母子俩回不去)
+1. [杨老二死因疑为酒后误吸呕吐物窒息](https://so.toutiao.com/search?keyword=杨老二死因疑为酒后误吸呕吐物窒息)
+1. [苏翊鸣十四冬大跳台夺冠](https://so.toutiao.com/search?keyword=苏翊鸣十四冬大跳台夺冠)
+1. [汽车降价潮来了吗](https://so.toutiao.com/search?keyword=汽车降价潮来了吗)
+1. [柳鑫宇赛后跪地不起被女伴搀扶离场](https://so.toutiao.com/search?keyword=柳鑫宇赛后跪地不起被女伴搀扶离场)
+1. [路遇冻雨如何安全驾驶](https://so.toutiao.com/search?keyword=路遇冻雨如何安全驾驶)
+1. [33岁女子洗头后骑车成面瘫](https://so.toutiao.com/search?keyword=33岁女子洗头后骑车成面瘫)
+1. [马面裙爆火 国风穿出文化自信](https://so.toutiao.com/search?keyword=马面裙爆火+国风穿出文化自信)
+1. [热热闹闹迎元宵节](https://so.toutiao.com/search?keyword=热热闹闹迎元宵节)
+1. [央媒评乘务员餐车吃饭被怒怼](https://so.toutiao.com/search?keyword=央媒评乘务员餐车吃饭被怒怼)
 1. [猎冰导演：用姚安娜与华为无关](https://so.toutiao.com/search?keyword=猎冰导演：用姚安娜与华为无关)
 1. [中方回应美国批准新一批对台军售](https://so.toutiao.com/search?keyword=中方回应美国批准新一批对台军售)
 1. [陈靖可孙千直播甜度超标](https://so.toutiao.com/search?keyword=陈靖可孙千直播甜度超标)
 1. [大理寺少卿游制作组分享幕后细节](https://so.toutiao.com/search?keyword=大理寺少卿游制作组分享幕后细节)
-1. [王小利回应被断绝父子关系](https://so.toutiao.com/search?keyword=王小利回应被断绝父子关系)
 1. [马思纯现场嗑孙千陈靖可](https://so.toutiao.com/search?keyword=马思纯现场嗑孙千陈靖可)
 1. [安徽省委书记与“小杨哥”当面交流](https://so.toutiao.com/search?keyword=安徽省委书记与“小杨哥”当面交流)
 1. [导演谈姚安娜片酬：肯定不贵啊](https://so.toutiao.com/search?keyword=导演谈姚安娜片酬：肯定不贵啊)
-1. [南京一高层小区起火致4死](https://so.toutiao.com/search?keyword=南京一高层小区起火致4死)
 1. [元宵节有哪些传统文化习俗](https://so.toutiao.com/search?keyword=元宵节有哪些传统文化习俗)
-1. [大桥事故幸存者：掉在车上有缓冲](https://so.toutiao.com/search?keyword=大桥事故幸存者：掉在车上有缓冲)
 1. [IPO要倒查10年？证监会否认](https://so.toutiao.com/search?keyword=IPO要倒查10年？证监会否认)
-1. [男子赶海拖海肠体力不支溺水](https://so.toutiao.com/search?keyword=男子赶海拖海肠体力不支溺水)
-1. [出嫁女儿一句话让全场爆笑](https://so.toutiao.com/search?keyword=出嫁女儿一句话让全场爆笑)
-1. [新冠或是首个X疾病](https://so.toutiao.com/search?keyword=新冠或是首个X疾病)
 1. [沥心沙大桥断裂后轮渡加班加点](https://so.toutiao.com/search?keyword=沥心沙大桥断裂后轮渡加班加点)
-1. [烟台多人捡海肠被海浪击倒溺水](https://so.toutiao.com/search?keyword=烟台多人捡海肠被海浪击倒溺水)
 1. [女浴室门口图片被吐槽变态](https://so.toutiao.com/search?keyword=女浴室门口图片被吐槽变态)
-1. [大V谈阿根廷财政盈余的代价](https://so.toutiao.com/search?keyword=大V谈阿根廷财政盈余的代价)
-1. [孕妇要注意哪些方面](https://so.toutiao.com/search?keyword=孕妇要注意哪些方面)
-1. [脑梗发病的前兆是什么](https://so.toutiao.com/search?keyword=脑梗发病的前兆是什么)
-1. [大桥被撞涉事船舶累计保额1000万元](https://so.toutiao.com/search?keyword=大桥被撞涉事船舶累计保额1000万元)
 1. [证监会：公司高管内幕交易必须严惩](https://so.toutiao.com/search?keyword=证监会：公司高管内幕交易必须严惩)
-1. [南京家长吐槽中小学调休](https://so.toutiao.com/search?keyword=南京家长吐槽中小学调休)
-1. [中风以后会影响寿命吗](https://so.toutiao.com/search?keyword=中风以后会影响寿命吗)
 1. [伊万科维奇向足协索要150万欧年薪](https://so.toutiao.com/search?keyword=伊万科维奇向足协索要150万欧年薪)
 1. [三只松鼠创始人力挺雷军](https://so.toutiao.com/search?keyword=三只松鼠创始人力挺雷军)
-1. [专家：一二线城市房价大概率要涨](https://so.toutiao.com/search?keyword=专家：一二线城市房价大概率要涨)
 1. [名嘴谈美对台军售：民进党作践台湾](https://so.toutiao.com/search?keyword=名嘴谈美对台军售：民进党作践台湾)
 1. [住户将垃圾脏水倒进电梯后按1楼](https://so.toutiao.com/search?keyword=住户将垃圾脏水倒进电梯后按1楼)
 1. [多起山火系人为引发肇事者该担何责](https://so.toutiao.com/search?keyword=多起山火系人为引发肇事者该担何责)
@@ -52,7 +77,6 @@
 1. [如何看待高合创始人丁磊的成与败](https://so.toutiao.com/search?keyword=如何看待高合创始人丁磊的成与败)
 1. [游客拍下歼-16战机从眼前飞过画面](https://so.toutiao.com/search?keyword=游客拍下歼-16战机从眼前飞过画面)
 1. [证监会：从严审核拟上市企业](https://so.toutiao.com/search?keyword=证监会：从严审核拟上市企业)
-1. [男子扫雪发现冰下不明物体游动](https://so.toutiao.com/search?keyword=男子扫雪发现冰下不明物体游动)
 1. [新车价格战老车主有补贴吗](https://so.toutiao.com/search?keyword=新车价格战老车主有补贴吗)
 1. [游客打网约车被出租车拦停](https://so.toutiao.com/search?keyword=游客打网约车被出租车拦停)
 1. [英伟达市值一夜暴增近2万亿元](https://so.toutiao.com/search?keyword=英伟达市值一夜暴增近2万亿元)
@@ -67,34 +91,28 @@
 1. [官方：证券违法成本只会越来越高](https://so.toutiao.com/search?keyword=官方：证券违法成本只会越来越高)
 1. [美国此时宣布对台军售意欲何为](https://so.toutiao.com/search?keyword=美国此时宣布对台军售意欲何为)
 1. [小米14 Ultra正式发布](https://so.toutiao.com/search?keyword=小米14+Ultra正式发布)
-1. [高合创始人丁磊现身上海总部](https://so.toutiao.com/search?keyword=高合创始人丁磊现身上海总部)
 1. [证监会：不让造假者“瞒天过海”](https://so.toutiao.com/search?keyword=证监会：不让造假者“瞒天过海”)
 1. [撞桥事故遇难村民：妻子哭到走不稳](https://so.toutiao.com/search?keyword=撞桥事故遇难村民：妻子哭到走不稳)
 1. [广州南沙取消元宵烟花表演](https://so.toutiao.com/search?keyword=广州南沙取消元宵烟花表演)
 1. [马朝旭代表中方出席G20外长会](https://so.toutiao.com/search?keyword=马朝旭代表中方出席G20外长会)
 1. [熊猫花花被遗忘外场 饲养员被解雇](https://so.toutiao.com/search?keyword=熊猫花花被遗忘外场+饲养员被解雇)
-1. [马面裙爆火 国风穿出文化自信](https://so.toutiao.com/search?keyword=马面裙爆火+国风穿出文化自信)
 1. [涨跌停股分析：141只涨停股](https://so.toutiao.com/search?keyword=涨跌停股分析：141只涨停股)
 1. [3D还原广州沥心沙大桥被撞断](https://so.toutiao.com/search?keyword=3D还原广州沥心沙大桥被撞断)
 1. [学者梳理2.2亿彩票大奖四大疑问](https://so.toutiao.com/search?keyword=学者梳理2.2亿彩票大奖四大疑问)
-1. [路遇冻雨如何安全驾驶](https://so.toutiao.com/search?keyword=路遇冻雨如何安全驾驶)
 1. [真实还原童年回忆](https://so.toutiao.com/search?keyword=真实还原童年回忆)
 1. [媒体：台方低估错判大陆](https://so.toutiao.com/search?keyword=媒体：台方低估错判大陆)
 1. [元宵节安全小贴士](https://so.toutiao.com/search?keyword=元宵节安全小贴士)
 1. [亚马逊发现重约200公斤巨蛇](https://so.toutiao.com/search?keyword=亚马逊发现重约200公斤巨蛇)
 1. [贵州山火五日：无声的万人救援](https://so.toutiao.com/search?keyword=贵州山火五日：无声的万人救援)
 1. [深圳一货车撞上便利店致2人受伤](https://so.toutiao.com/search?keyword=深圳一货车撞上便利店致2人受伤)
-1. [杨老二死因疑为酒后误吸呕吐物窒息](https://so.toutiao.com/search?keyword=杨老二死因疑为酒后误吸呕吐物窒息)
 1. [粥饼伦出摊遇顾客逃单92元](https://so.toutiao.com/search?keyword=粥饼伦出摊遇顾客逃单92元)
 1. [3D分析沥心沙大桥能承受多大撞击力](https://so.toutiao.com/search?keyword=3D分析沥心沙大桥能承受多大撞击力)
 1. [赖岳谦：希望有人揭开渔船事件真相](https://so.toutiao.com/search?keyword=赖岳谦：希望有人揭开渔船事件真相)
 1. [余承东：Pocket 2像直板机一样平整](https://so.toutiao.com/search?keyword=余承东：Pocket+2像直板机一样平整)
-1. [下冻雨家门口坡上结冰母子俩回不去](https://so.toutiao.com/search?keyword=下冻雨家门口坡上结冰母子俩回不去)
 1. [媒体：俄乌冲突这场悲剧本可以避免](https://so.toutiao.com/search?keyword=媒体：俄乌冲突这场悲剧本可以避免)
 1. [考虑解禁日本水产品？外交部回应](https://so.toutiao.com/search?keyword=考虑解禁日本水产品？外交部回应)
 1. [美国就巴以问题对国际法院发号施令](https://so.toutiao.com/search?keyword=美国就巴以问题对国际法院发号施令)
 1. [遇难公交司机妻子伤心过度医院就诊](https://so.toutiao.com/search?keyword=遇难公交司机妻子伤心过度医院就诊)
-1. [导致杨老二死亡的吸入性窒息是啥](https://so.toutiao.com/search?keyword=导致杨老二死亡的吸入性窒息是啥)
 1. [普京赠送金正恩豪车 美方回应](https://so.toutiao.com/search?keyword=普京赠送金正恩豪车+美方回应)
 1. [证监会：欺诈造假的公司只是少数](https://so.toutiao.com/search?keyword=证监会：欺诈造假的公司只是少数)
 1. [贵州1天通报6起山火原因](https://so.toutiao.com/search?keyword=贵州1天通报6起山火原因)
@@ -104,7 +122,6 @@
 1. [官方通报2.2亿彩票事件](https://so.toutiao.com/search?keyword=官方通报2.2亿彩票事件)
 1. [贾玲的“售后经济”吸金力如何](https://so.toutiao.com/search?keyword=贾玲的“售后经济”吸金力如何)
 1. [刘涛戚薇米兰同框](https://so.toutiao.com/search?keyword=刘涛戚薇米兰同框)
-1. [《热辣滚烫》票房破31亿](https://so.toutiao.com/search?keyword=《热辣滚烫》票房破31亿)
 1. [村民挖井塌方被埋28小时遇难](https://so.toutiao.com/search?keyword=村民挖井塌方被埋28小时遇难)
 1. [专家：许多肥胖患者缺乏安全感](https://so.toutiao.com/search?keyword=专家：许多肥胖患者缺乏安全感)
 1. [沥心沙大桥断面为何这么平整](https://so.toutiao.com/search?keyword=沥心沙大桥断面为何这么平整)
@@ -130,7 +147,6 @@
 1. [库里生涯常规赛助攻数达到6000个](https://so.toutiao.com/search?keyword=库里生涯常规赛助攻数达到6000个)
 1. [独行侠豪取7连胜](https://so.toutiao.com/search?keyword=独行侠豪取7连胜)
 1. [雪天轿车刹不住车碰上电动车](https://so.toutiao.com/search?keyword=雪天轿车刹不住车碰上电动车)
-1. [俄乌战事两周年 乌克兰经历了什么](https://so.toutiao.com/search?keyword=俄乌战事两周年+乌克兰经历了什么)
 1. [夫妻相约赴死妻子身亡丈夫反悔](https://so.toutiao.com/search?keyword=夫妻相约赴死妻子身亡丈夫反悔)
 1. [外国人获准在乌克兰国民警卫队服役](https://so.toutiao.com/search?keyword=外国人获准在乌克兰国民警卫队服役)
 1. [专家：中奖2.2亿不用缴个税有违公平](https://so.toutiao.com/search?keyword=专家：中奖2.2亿不用缴个税有违公平)
@@ -149,7 +165,6 @@
 1. [小车路边停车开车门被路过车辆撞上](https://so.toutiao.com/search?keyword=小车路边停车开车门被路过车辆撞上)
 1. [女子景区卖发簪被拦后打骂保安](https://so.toutiao.com/search?keyword=女子景区卖发簪被拦后打骂保安)
 1. [人民网评网红扮赵世子](https://so.toutiao.com/search?keyword=人民网评网红扮赵世子)
-1. [柳鑫宇赛后跪地不起被女伴搀扶离场](https://so.toutiao.com/search?keyword=柳鑫宇赛后跪地不起被女伴搀扶离场)
 1. [杨瀚森谈下场对阵日本：打就完事了](https://so.toutiao.com/search?keyword=杨瀚森谈下场对阵日本：打就完事了)
 1. [武汉一小区物业请铲车除雪](https://so.toutiao.com/search?keyword=武汉一小区物业请铲车除雪)
 1. [曝阿富汗数十处古遗址被夷为平地](https://so.toutiao.com/search?keyword=曝阿富汗数十处古遗址被夷为平地)
@@ -290,7 +305,6 @@
 1. [贵州一男子辱骂119接警员被拘10日](https://so.toutiao.com/search?keyword=贵州一男子辱骂119接警员被拘10日)
 1. [涉事船员操作失当引发大桥事故](https://so.toutiao.com/search?keyword=涉事船员操作失当引发大桥事故)
 1. [男子高铁上被邻座大哥“投喂”](https://so.toutiao.com/search?keyword=男子高铁上被邻座大哥“投喂”)
-1. [高合汽车：正全力采取各种纾困举措](https://so.toutiao.com/search?keyword=高合汽车：正全力采取各种纾困举措)
 1. [张颂文新剧首播口碑](https://so.toutiao.com/search?keyword=张颂文新剧首播口碑)
 1. [女生遇到心仪男生下车要微信](https://so.toutiao.com/search?keyword=女生遇到心仪男生下车要微信)
 1. [巴西总统怒批以色列引发连锁反应](https://so.toutiao.com/search?keyword=巴西总统怒批以色列引发连锁反应)
